<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!--회원정보 문구-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_title"
        android:textSize="20sp"
        android:textColor="#33529F"
        android:lineSpacingExtra="3.8sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintBottom_toTopOf="@+id/setNumber"
        android:layout_marginBottom="119.4dp"
        android:layout_marginStart="3.5dp" />

    <!--이름-->
    <TextView
        android:id="@+id/nameMent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_fname_ment"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setName"
        app:layout_constraintBottom_toTopOf="@+id/setName"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <EditText
        android:id="@+id/setName"
        android:layout_width="135dp"
        android:layout_height="32.5dp"
        android:background="@drawable/input_box_eefof5"
        android:hint="@string/ui_fname"
        android:textColorHint="#727272"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        android:paddingStart="15.9dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintBottom_toTopOf="@+id/setNumber"
        android:layout_marginBottom="39dp"
        tools:ignore="Autofill,SmallSp,TextFields" />

    <TextView
        android:id="@+id/nameMent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_lname_ment"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setName2"
        app:layout_constraintBottom_toTopOf="@+id/setName2"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <EditText
        android:id="@+id/setName2"
        android:layout_width="135dp"
        android:layout_height="32.5dp"
        android:background="@drawable/input_box_eefof5"
        android:hint="@string/ui_lname"
        android:textColorHint="#727272"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        android:paddingStart="15.9dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/setNumber"
        app:layout_constraintBottom_toTopOf="@+id/setNumber"
        android:layout_marginBottom="39dp"
        tools:ignore="Autofill,SmallSp,TextFields" />


    <!--전화번호-->
    <TextView
        android:id="@+id/numberMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_numment"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintBottom_toTopOf="@+id/setNumber"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <EditText
        android:id="@+id/setNumber"
        android:layout_width="285dp"
        android:layout_height="32.5dp"
        android:background="@drawable/input_box_eefof5"
        android:inputType="phone"
        android:hint="@string/ui_number"
        android:textColorHint="#727272"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        android:paddingStart="15.9dp"
        android:paddingEnd="15.9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="220.9dp"
        tools:ignore="Autofill,SmallSp" />

    <!--학교-->
    <TextView
        android:id="@+id/univMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_ument"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setUniv"
        app:layout_constraintBottom_toTopOf="@+id/setUniv"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <EditText
        android:id="@+id/setUniv"
        android:layout_width="285dp"
        android:layout_height="32.5dp"
        android:background="@drawable/input_box_eefof5"
        android:inputType="text"
        android:hint="@string/ui_univ"
        android:textColorHint="#727272"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        android:paddingStart="15.9dp"
        android:paddingEnd="15.9dp"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintTop_toBottomOf="@+id/setNumber"
        android:layout_marginTop="27.1dp"
        tools:ignore="Autofill,SmallSp" />

    <!--학년-->
    <TextView
        android:id="@+id/levelMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_lment"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setLevel"
        app:layout_constraintBottom_toTopOf="@+id/setLevel"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <Spinner
        android:id="@+id/setLevel"
        android:layout_width="285dp"
        android:layout_height="32.5dp"
        android:background="@drawable/item_spinner_editprofile"
        android:paddingStart="15.9dp"
        android:paddingEnd="15.9dp"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintTop_toBottomOf="@+id/setNumber"
        android:layout_marginTop="86.7dp"
        tools:ignore="SmallSp" />

    <!--전공-->
    <TextView
        android:id="@+id/majorMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_mment"
        android:textColor="#33529F"
        android:textSize="12sp"
        android:lineSpacingExtra="2.1sp"
        android:fontFamily="@font/nanumsquareroundeb"
        app:layout_constraintStart_toStartOf="@+id/setMajor"
        app:layout_constraintBottom_toTopOf="@+id/setMajor"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="7.1dp" />

    <EditText
        android:id="@+id/setMajor"
        android:layout_width="285dp"
        android:layout_height="32.5dp"
        android:background="@drawable/input_box_eefof5"
        android:inputType="text"
        android:hint="@string/ui_major"
        android:textColorHint="#727272"
        android:textColor="#000000"
        android:textSize="11sp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/nanumsquareroundb"
        android:paddingStart="15.9dp"
        android:paddingEnd="15.9dp"
        app:layout_constraintStart_toStartOf="@+id/setNumber"
        app:layout_constraintTop_toBottomOf="@+id/setNumber"
        android:layout_marginTop="146.3dp"
        tools:ignore="Autofill,SmallSp" />

    <!--완료버튼-->

    <Button
        android:id="@+id/checkInfo"
        android:layout_width="300dp"
        android:layout_height="33.2dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/login_box"
        android:fontFamily="@font/nanumsquareroundb"
        android:lineSpacingExtra="2.4sp"
        android:text="@string/ui_fin"
        android:textColor="#ffffff"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>