<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td_report"
        android:textSize="15sp"
        android:textColor="#33529f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td_black"
        android:textSize="15sp"
        android:textColor="#33529f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warn"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/bye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td_bye"
        android:textSize="15sp"
        android:textColor="#33529f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>