<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="83dp"
    android:background="@drawable/postlist_border"
    android:layout_marginBottom="8.7dp">

    <ImageView
        android:id="@+id/postimage"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/profile_image"
        android:layout_marginTop="11.9dp"
        android:layout_marginStart="10.1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/posttitle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/il_title"
        android:textColor="#2a3448"
        android:textSize="13sp"
        android:lineSpacingExtra="2.4sp"
        android:fontFamily="@font/nanumsquareroundb"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postimage"
        android:layout_marginStart="11.6dp"
        android:layout_marginTop="16.4dp" />

    <ImageView
        android:id="@+id/threeDot"
        android:layout_width="7dp"
        android:layout_height="13dp"
        android:layout_marginTop="17.2dp"
        android:layout_marginEnd="18.5dp"
        android:src="@drawable/three_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="14.1dp"
        android:layout_height="13.5dp"
        android:src="@drawable/unstar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="11.9dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/uploadtime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/il_time1"
        android:textSize="11sp"
        android:textColor="#2a3448"
        android:lineSpacingExtra="1.9sp"
        android:fontFamily="@font/nanumsquareroundb"
        app:layout_constraintStart_toStartOf="@+id/posttitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12.8dp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/uploadtime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/il_time2"
        android:textSize="11sp"
        android:textColor="#2a3448"
        android:lineSpacingExtra="1.9sp"
        android:fontFamily="@font/nanumsquareroundb"
        app:layout_constraintStart_toEndOf="@+id/uploadtime1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12.8dp"
        android:layout_marginStart="20dp"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>