<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="106.4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="7.1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="76.2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="11.9dp"
            android:layout_marginStart="10.1dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="205.8dp"
            android:layout_height="wrap_content"
            android:text="@string/if_title"
            android:textColor="#2a3448"
            android:textSize="12sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:lineSpacingExtra="2.4sp"
            android:fontFamily="@font/nanumsquareroundb"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            android:layout_marginTop="4.6dp"
            android:layout_marginStart="11.6dp" />

        <ImageView
            android:id="@+id/choice"
            android:layout_width="2dp"
            android:layout_height="10.4dp"
            android:src="@drawable/three_dot"
            app:layout_constraintTop_toTopOf="@+id/postTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18.5dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_time"
            android:textSize="9.5sp"
            android:textColor="#2a3448"
            android:lineSpacingExtra="1.9sp"
            android:fontFamily="@font/nanumsquareroundb"
            app:layout_constraintTop_toBottomOf="@+id/postTitle"
            app:layout_constraintStart_toStartOf="@+id/postTitle"
            android:layout_marginTop="13.1dp"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30.2dp"
        android:background="@drawable/halfbox_afbde1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/gotoReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_review"
            android:textColor="#2a3448"
            android:textSize="9.5sp"
            android:fontFamily="@font/nanumsquareroundb"
            android:lineSpacingExtra="1.9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>